--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -23,6 +23,7 @@ html {
 form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
     background: #fff;
     padding: 32px 24px;
